--- a/index.html
+++ b/index.html
@@ -131,11 +131,7 @@
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools
-                                    (Webdriver,
-                                    ProtractorJS, WebdriverIO, Selenide). Also i have experience with different tools
-                                    around
-                                    - Jenkins, Docker, NodeJS, NPM, pip and many others.</p>
+                                <p>JavaScript/TypeScript, Python, Java. Huge experience with Selenium Webdriver-based tools (ProtractorJS, WebdriverIO, Selenide) and Chrome DevTools based (Puppeteer, Playwright). Good experience with stack around - CI/CD systems, Reporting, Docker, Kubernetes, Test Farms, clouds, NodeJS, NPM and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -148,9 +144,9 @@
                                 <h4>
                                     <strong>Manual testing</strong>
                                 </h4>
-                                <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile
+                                <p>A lot of experience with manual testing - Web-applications, Websites, APIs, mobile
                                     applications.
-                                    Writing test cases, determining priority of bugs, using different test aproaches -
+                                    Writing test cases, determining priority of bugs, using different testing techniques -
                                     pairwise
                                     testing, classes of equivalence, boundary testing and many other.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
@@ -163,11 +159,9 @@
                                     <i class="fa fa-graduation-cap fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Coaching</strong>
+                                    <strong>Teaching, mentoring and coaching</strong>
                                 </h4>
-                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own
-                                    developed
-                                    teaching program.</p>
+                                <p>Sharing my knowledge in JavaScript automation on my courses and workshop. Also mentoring people, and building career development plans. Ping me if you are interested in private workshop/course!</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -180,10 +174,9 @@
                                 <h4>
                                     <strong>Presentations and speeches</strong>
                                 </h4>
-                                Participating in different conferences, meetups, and other community meetings. Some of
-                                my speeches were uploaded to
-                                <strong><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
-                                        style="color:red;">YouTube</a></strong>
+                                Participating in different conferences, meetups, and other community meetings. Some of my speeches were uploaded to </br><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
+                                    style="color:rgb(255, 255, 255);"><i class="fab fa-youtube fa-fw fa-lg"></i>YouTube</a></strong>. </br>I am open to have a talk on your event!
+        
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -211,7 +204,7 @@
                                     <strong>Geeky devices</strong>
                                 </h4>
                                 <p>
-                                    Always trying to play with new and shiny toys first! Once i wasted whole day to
+                                    Always trying to play with new and shiny toys first! Once I wasted whole day to
                                     host this website on my network router.
                                 </p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
