--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Oleksandr Khotemskyi</h1>
-            <h3>Software Development Engineer in Test</h3>
+            <h3>Software testing expert</h3>
             <br>
             <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
         </div>
@@ -62,8 +62,6 @@
                     </h3>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="skype:xatabu4">
-                                <i class="fab fa-skype fa-2x fa-fw"></i> xatabu4</a>
                             <a href="https://telegram.me/xotabu4">
                                 <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
                             <a href="mailto:xotabu4@gmail.com">
@@ -129,9 +127,9 @@
                                     <i class="fa fa-cog fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Test automation</strong>
+                                    <strong>Expert in automated testing</strong>
                                 </h4>
-                                <p>JavaScript/TypeScript, Python, Java. Huge experience with Selenium Webdriver-based tools (ProtractorJS, WebdriverIO, Selenide) and Chrome DevTools based (Puppeteer, Playwright). Good experience with stack around - CI/CD systems, Reporting, Docker, Kubernetes, Test Farms, clouds, NodeJS, NPM and many others.</p>
+                                <p>I can build robust and automated testing system for any projects and any difficulty using huge variety of technologies. Need to automate web, mobile, performance or anything else? You can count on me.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -142,13 +140,9 @@
                                     <i class="fa fa-keyboard fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Manual testing</strong>
+                                    <strong>Quality expert</strong>
                                 </h4>
-                                <p>A lot of experience with manual testing - Web-applications, Websites, APIs, mobile
-                                    applications.
-                                    Writing test cases, determining priority of bugs, using different testing techniques -
-                                    pairwise
-                                    testing, classes of equivalence, boundary testing and many other.</p>
+                                <p>Huge experience of setting up or upgrading testing processes on dozens of projects. Building complex test strategies and bringing them to reality</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -161,7 +155,7 @@
                                 <h4>
                                     <strong>Teaching, mentoring and coaching</strong>
                                 </h4>
-                                <p>Sharing my knowledge in JavaScript automation on my courses and workshop. Also mentoring people, and building career development plans. Ping me if you are interested in private workshop/course!</p>
+                                <p>Sharing my knowledge in quality and testing on my courses and workshops. Also mentoring people, and building career development plans. Reach me if you are interested in private workshop/course for your company!</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -172,7 +166,7 @@
                                     <i class="fa fa-users fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Presentations and speeches</strong>
+                                    <strong>Public speaker</strong>
                                 </h4>
                                 Participating in different conferences, meetups, and other community meetings. Some of my speeches were uploaded to </br><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
                                     style="color:rgb(255, 255, 255);"><i class="fab fa-youtube fa-fw fa-lg"></i>YouTube</a></strong>. </br>I am open to have a talk on your event!
