--- a/index.html
+++ b/index.html
@@ -81,11 +81,6 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.npmjs.com/~xotabu4">
-                                <i class="fab fa-npm fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
                             <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
                                 <i class="fab fa-linkedin fa-fw fa-3x"></i>
                             </a>
@@ -96,12 +91,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/xotabu4">
-                                <i class="fab fa-twitter fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/user/Xotabu44/">
+                            <a href="https://www.youtube.com/@Hottesting">
                                 <i class="fab fa-youtube fa-fw fa-3x"></i>
                             </a>
                         </li>
