--- a/index.html
+++ b/index.html
@@ -63,13 +63,28 @@
                     <ul class="list-unstyled">
                         <li>
                             <a href="https://telegram.me/xotabu4">
-                                <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
+                                <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xotabu4</a>
                             <a href="mailto:xotabu4@gmail.com">
                                 <i class="far fa-envelope fa-2x fa-fw"></i> xotabu4@gmail.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
+                        <li>
+                            <a href="https://www.youtube.com/@Hottesting">
+                                <i class="fab fa-youtube fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://t.me/js_for_testing">
+                            <i class="fab fa-telegram fa-fw fa-3x"> Hot testing community</i>
+                        </a>
+                        </li>
+                        <li>
+                            <a href="https://discord.gg/MTC2VpFTtx">
+                                <i class="fab fa-discord fa-fw fa-3x"></i>
+                            </a>
+                        </li>
                         <li>
                             <a href="https://www.github.com/xotabu4">
                                 <i class="fab fa-github fa-fw fa-3x"></i>
@@ -83,16 +98,6 @@
                         <li>
                             <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
                                 <i class="fab fa-linkedin fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/OleksandrKhotemskyi/">
-                                <i class="fab fa-facebook fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/@Hottesting">
-                                <i class="fab fa-youtube fa-fw fa-3x"></i>
                             </a>
                         </li>
                     </ul>
