--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </li>
                         <li>
                             <a href="https://t.me/js_for_testing">
-                            <i class="fab fa-telegram fa-fw fa-3x"> Hot testing community</i>
+                            <i class="fab fa-telegram fa-2x fa-fw"> Hot testing community</i>
                         </a>
                         </li>
                         <li>
