--- a/index.html
+++ b/index.html
@@ -73,31 +73,37 @@
                         <li>
                             <a href="https://www.youtube.com/@Hottesting">
                                 <i class="fab fa-youtube fa-fw fa-3x"></i>
+                                <br>My channel
                             </a>
                         </li>
                         <li>
                             <a href="https://t.me/js_for_testing">
-                            <i class="fab fa-telegram fa-2x fa-fw"> Hot testing community</i>
+                            <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> 
+                            <br>My community</a>
                         </a>
                         </li>
                         <li>
                             <a href="https://discord.gg/MTC2VpFTtx">
                                 <i class="fab fa-discord fa-fw fa-3x"></i>
+                                <br>My community
                             </a>
                         </li>
                         <li>
                             <a href="https://www.github.com/xotabu4">
                                 <i class="fab fa-github fa-fw fa-3x"></i>
+                                <br>My github
                             </a>
                         </li>
                         <li>
                             <a href="https://stackoverflow.com/users/2695752/xotabu4">
                                 <i class="fab fa-stack-overflow fa-fw fa-3x"></i>
+                                <br>My stackoverflow
                             </a>
                         </li>
                         <li>
                             <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
                                 <i class="fab fa-linkedin fa-fw fa-3x"></i>
+                                <br>My Linkedin
                             </a>
                         </li>
                     </ul>
