Margin top for text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Oleksandr Khotemskyi</h1>
+            <h1 style="margin-top: 200px;">Oleksandr Khotemskyi</h1>
             <h3>Software testing expert</h3>
             <br>
             <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
