--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://t.me/js_for_testing">
+                            <a href="https://t.me/hot_testing">
                             <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> 
                             <br>My community</a>
                         </a>
