--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </a>
                         </li>
                         <li>
-                            <a href="https://discord.gg/MTC2VpFTtx">
+                            <a href="https://discord.gg/232nYNxPsQ">
                                 <i class="fab fa-discord fa-fw fa-3x"></i>
                                 <br>My community
                             </a>
